# aggr-haskell

./: .gitignore  LICENSE  README.md  aggr-haskell.cabal  albums.json  stack.yaml
src/: Album.hs  Dates.hs  Main.hs
