name:                aggr-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aggr-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Bennie Robinson
maintainer:          example@example.com
copyright:           2018 Bennie Robinson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aggr-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , html-conduit
                     , http-client
                     , http-conduit
                     , text
                     , time
                     , xml-conduit
